feat: removed duplicated directory

--- a/Mathematics/1. Basic Mathematics/1-1. Variable and Constants/연습문제 1-1.ipynb
+++ b/Mathematics/1. Basic Mathematics/1-1. Variable and Constants/연습문제 1-1.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "source": [
     "# 연습문제 1-1.\n",
-    "세로의 길이가 acm이고 가로의 길이가 bcm인 사각형이 있다고 가정합시다.<br>\n",
-    "이때, 사각형의 면적 Scm^2는 S = ab와 같이 표현할 수 있습니다.<br>\n",
+    "세로의 길이가 ***a***cm이고 가로의 길이가 ***b***cm인 사각형이 있다고 가정합시다.<br>\n",
+    "이때, 사각형의 면적 ***S***cm<sup>2</sup>는 ***S*** = ***ab***와 같이 표현할 수 있습니다.<br>\n",
     "만약 세로의 길이는 그대로 두고, 가로의 길이만 바꿔가면서 사각형의 면적이 어떻게 변화하는지 알아보고 싶다면, a와 b중 어떤 것이 변수이고 어떤 것이 상수일까요?"
    ]
   },
