feat : answered practice question

--- a/Mathematics/1. Basic Mathematics/1-2. Linear and Quadratic Equations/연습문제 1-2.ipynb
+++ b/Mathematics/1. Basic Mathematics/1-2. Linear and Quadratic Equations/연습문제 1-2.ipynb
@@ -11,15 +11,29 @@
     "변수가 ***a***, ***b***, ***x***라고 가정할 때, 이 식의 차수를 답하시오.<br>\n",
     "1-1. *-3ab*<br>\n",
     "1-2. *2ab + b + 4*<br>\n",
-    "1-3. *3x<sup>2</sup> + 4*<br>"
+    "1-3. *3x<sup>2</sup> + 4*<br>\n",
+    "\n",
+    "2. 다음 식은 x에 대한 2차식입니다. 모든 계수를 열거하시오.<br>\n",
+    "*3ax<sup>2</sup> + x + 2ab*"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de310946-630d-4f4c-8a02-b366dfbbb0e0",
+   "cell_type": "markdown",
+   "id": "cfd77979-5c69-416f-b2e4-7719de15afee",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# My answer\n",
+    "1-1. 계수 -> -3, 차수 -> 2<br>\n",
+    "1-2. 계수 -> 2, 1, 4, 차수 -> 2<br>\n",
+    "1-3. 계수 -> 3, 4, 차수 -> 2<br>\n",
+    "<br>\n",
+    "2. 계수 -> 3a, 1, 2ab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "579a904f-94bc-4eda-a788-c6d1004a8433",
+   "metadata": {},
    "source": []
   }
  ],
