feat : updated practice question

--- a/Mathematics/1. Basic Mathematics/1-004. Square Root/연습문제 1-4.ipynb
+++ b/Mathematics/1. Basic Mathematics/1-004. Square Root/연습문제 1-4.ipynb
@@ -9,8 +9,8 @@
     "다음 문제에 답하시오.<br>\n",
     "1. 9의 제곱근을 구하시오.<br>\n",
     "2. 다음 문제를 계산하시오. 단, 근호안의 숫자가 최소가 되도록 표현하시오.<br>\n",
-    "2-1. $\\sqrt18$ + $\\sqrt2$ <br>\n",
-    "2-2. 3$\\sqrt6$ x 2$\\sqrt2$ <br>\n",
+    "2-1. $\\sqrt{18}$ + $\\sqrt{2}$ <br>\n",
+    "2-2. 3$\\sqrt{6}$ x 2$\\sqrt{2}$ <br>\n",
     "   "
    ]
   },
