--- a/Mathematics/1. Basic Mathematics/1-005. Powers and Power Roots/연습문제 1-5.ipynb
+++ b/Mathematics/1. Basic Mathematics/1-005. Powers and Power Roots/연습문제 1-5.ipynb
@@ -8,8 +8,8 @@
     "# 연습문제 1-5\n",
     "다음 문제를 계산하시오. 단, 근호 안의 숫자가 최소가 되도록 표현하시오.\n",
     "1. 4<sup>4</sup> x 2<sup>-1</sup> $\\div$ 2<sup>2</sup>\n",
-    "2. $^3\\sqrt81$ $\\times$ $^3\\sqrt9$\n",
-    "3. $^3\\sqrt{\\sqrt64}$"
+    "2. $^3\\sqrt{81}$ $\\times$ $^3\\sqrt{9}$\n",
+    "3. $^3\\sqrt{\\sqrt{64}}$"
    ]
   },
   {
