feat: transformer encoder done (nothing in it yet)

--- a/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
+++ b/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
@@ -5,7 +5,8 @@
    "id": "15b794b3-dacf-4427-a669-bd91ef4474eb",
    "metadata": {},
    "source": [
-    "# 3.1 Encoder and Decoder Stacks"
+    "# 3.1 Encoder and Decoder Stacks\n",
+    "Implemented only based on chapter 3.1"
    ]
   },
   {
@@ -15,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def encoder(input_embedding):\n",
+    "class Encoder:\n",
     "    '''\n",
     "    Composed of 6 stack of identical layers\n",
     "    Each layer has two sub-layers\n",
@@ -29,27 +30,52 @@
     "    To facilitate these residual connections, all sub-layers in the model (including embedding layer)\n",
     "    produces outputs of dimension d_model = 512\n",
     "    '''\n",
-    "    def ma_layer(input_embedding):\n",
-    "        return layer_norm\n",
+    "    def __init__(self):\n",
+    "        self._ = None\n",
+    "\n",
+    "    def input_embedding(self, input):\n",
+    "        return Embed().run(input)\n",
+    "                \n",
+    "    def positional_encoding(self, input): ### Not yet described, described in 3.5\n",
+    "        embedded_input = self.input_embedding(input)\n",
+    "        positional_encoded_embedding = PositionalEncoding().run(embedded_input) # will be defined later on.\n",
+    "        return positional_encoded_embedding\n",
+    "\n",
+    "    def normalized(self, output): ### Not yet described, described in ???\n",
+    "        normalized_output = Normalized().run(output) # will be defined later on.\n",
+    "        return normalized_output \n",
+    "        \n",
+    "    def add_norm(self, input, layer_output):\n",
+    "        # in ma_layer, input will be positional_encoded_embedding\n",
+    "        # in ff_layer, input will be the output of ma_layer\n",
+    "        return normalized(input + layer_output)\n",
+    "\n",
+    "    def multihead_attention(self, input): ### Not yet described, described in 3.2.2\n",
+    "        output = MultiHead().run(input) # will be defined later on.\n",
+    "        return output\n",
+    "\n",
+    "    def feed_forward(self, input): ### Not yet described, described in 3.3\n",
+    "        output = FeedForward().run(input) # will be defined later on \n",
+    "        return output\n",
+    "        \n",
+    "    def ma_layer(self, positional_encoded_embedding):\n",
+    "        multihead_attentioned = self.multihead_attention(input_embedding)\n",
+    "        layer_norm_ouptut = self.add_norm(positional_encoded_embedding, multihead_attentioned)\n",
+    "        return layer_norm_ouptut\n",
+    "        \n",
+    "    def ff_layer(self, ma_layer_output):\n",
+    "        feed_forwarded = self.feed_forward(ma_layer_output)\n",
+    "        layer_norm_ouptut = self.add_norm(ma_layer_output, feed_forwarded)\n",
+    "        return layer_norm_ouptut\n",
+    "        \n",
+    "    def run(self, input):\n",
+    "        positional_encoded_embedding = positional_encoding(input)\n",
+    "        for _ in range(6):\n",
+    "            ma_layer_output = self.ma_layer(positional_encoded_embedding)\n",
+    "            ff_layer_output = self.ff_layer(ma_layer_output)\n",
+    "            positional_encoded_embedding = ff_layer_output\n",
     "    \n",
-    "    def ff_layer(ma_layer_output):\n",
-    "        return layer_norm\n",
-    "\n",
-    "    def layer_norm():\n",
-    "        return x + sublayer(x)\n",
-    "        \n",
-    "    def sublayer(x):\n",
-    "        return ########################\n",
-    "        \n",
-    "    for _ in range(6):\n",
-    "        ma_layer_output = ma_layer(input_embedding)\n",
-    "        normalized_ma_layer_output = normalize(ma_layer_output)\n",
-    "        \n",
-    "        ff_layer_output = ff_layer(normalized_ma_layer_output)\n",
-    "        normalized_ff_layer_output = normalize(ff_layer_output)\n",
-    "        input_embedding = normalized_ff_layer_output\n",
-    "\n",
-    "    return normalized_ff_layer_output"
+    "        return ff_layer_output"
    ]
   },
   {
@@ -59,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def decoder(encoder_output):\n",
+    "class Decoder:        \n",
     "    '''\n",
     "    Composed of 6 stack of identical layers.\n",
     "    Each layer has three sub-layers.\n",
@@ -73,7 +99,43 @@
     "\n",
     "    To facilitate these residual connections, all sub-layers in the model (including embedding layer)\n",
     "    produces outputs of dimension d_model = 512\n",
-    "    '''"
+    "    '''\n",
+    "    def __init__(self):\n",
+    "        self.input = None\n",
+    "        self.encoder = Encoder()\n",
+    "        self.encoded_output = self.encoder.run(self.input)\n",
+    "        \n",
+    "    def positional_encoding(embedding):\n",
+    "        return pe_embedding\n",
+    "        \n",
+    "    def masked_ma_layer(pe_embedding):\n",
+    "        return layer_norm\n",
+    "        \n",
+    "    def ma_layer(masked_ma_layer_output, encoder_output):\n",
+    "        return layer_norm\n",
+    "    \n",
+    "    def ma_layer(input_embedding):\n",
+    "        return layer_norm\n",
+    "    \n",
+    "    def ff_layer(ma_layer_output):\n",
+    "        return layer_norm\n",
+    "\n",
+    "    def layer_norm(layer_output):\n",
+    "        return x + sublayer(x)\n",
+    "        \n",
+    "    def sublayer(x):\n",
+    "        return ########################\n",
+    "        \n",
+    "    pe_embedding = positional_encoding(input_embedding)\n",
+    "    for _ in range(6):\n",
+    "        ma_layer_output = ma_layer(pe_embedding)\n",
+    "        normalized_ma_layer_output = layer_norm(ma_layer_output)\n",
+    "        \n",
+    "        ff_layer_output = ff_layer(normalized_ma_layer_output)\n",
+    "        normalized_ff_layer_output = layer_norm(ff_layer_output)\n",
+    "        pe_embedding = normalized_ff_layer_output\n",
+    "\n",
+    "    return normalized_ff_layer_output"
    ]
   }
  ],
