feat: updating multi-head attention (in progress)

--- a/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
+++ b/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
@@ -236,7 +236,12 @@
     "    def __init__(self):\n",
     "        pass\n",
     "\n",
-    "    will do this tomorrow\n",
+    "    def concat(self, Q, K, V, W):\n",
+    "\n",
+    "    def attention(self, Q, K, V, W):\n",
+    "\n",
+    "    def run(self, Q, K, V, W):\n",
+    "        \n",
     "    "
    ]
   },
