feat: updated multi-head attention

--- a/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
+++ b/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
@@ -227,23 +227,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7536c995-b4d8-46f3-adf7-dfca0cae7f66",
    "metadata": {},
    "outputs": [],
    "source": [
     "class MultiHead:\n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    '''\n",
+    "    Instead of performing a single attention function with dmodel-dimensional keys, values and queries,\n",
+    "    we found it beneficial to linearly project the queries, keys and values h times \n",
+    "    with different, learned linear projections to dk, dk and dv dimensions, respectively.\n",
+    "    On each of these projected versions of queries, keys and values\n",
+    "    we then perform the attention function in parallel, yielding dv-dimensional output values.\n",
+    "    \n",
+    "    These are concatenated and once again projected, resulting in the final values, as depicted in Figure 2.\n",
+    "    Multi-head attention allows the model to jointly attend to information from different representation subspaces at different positions.\n",
+    "    With a single attention head, averaging inhibits this.\n",
     "\n",
-    "    def concat(self, Q, K, V, W):\n",
+    "    Figure 2 : \n",
+    "    $ MultiHead(Q, K, V ) = Concat(head_1, ..., head_h)W^{O}$\n",
+    "    $where head_i = Attention(QW_i^Q, KW_i^K, VW_i^V)$ ######### = ScaledDotProductAttention()\n",
     "\n",
-    "    def attention(self, Q, K, V, W):\n",
+    "    Where the projections are parameter matrices \n",
+    "    $W_i^Q ∈ R^{d_{model}\\times d_k }, W_i^K ∈ R^{d_{model}\\timesd_k}, W_i^V ∈ R^{d_{model} \\times d_v} and WO ∈ R^{hd_v \\times d_{model}}$.\n",
     "\n",
-    "    def run(self, Q, K, V, W):\n",
+    "    In this work we employ $h = 8$ parallel attention layers, or heads. \n",
+    "    For each of these we use $d_k = d_v = d_{model}/h = 64$.\n",
+    "    Due to the reduced dimension of each head, the total computational cost is similar to\n",
+    "    that of single-head attention with full dimensionality.\n",
+    "\n",
+    "    '''\n",
+    "    def __init__(self, d_model=512, num_heads=8):\n",
+    "        '''\n",
+    "        d_model = dimension of input vector\n",
+    "        num_heads = number of attention heads to use / h = 8 as per the paper\n",
+    "        '''\n",
+    "        self.attention = ScaledDotProductAttention() # Attention\n",
+    "        self.d_model = d_model\n",
+    "        self.num_heads = num_heads\n",
+    "        self.depth = d_model // num_heads \n",
+    "        '''\n",
+    "        Calculates the dimension of each head.\n",
+    "        It divides the dimension of the model by the number of heads.\n",
+    "        To ensure the input is evenly split across the heads.\n",
+    "        '''\n",
     "        \n",
+    "        self.wq = [np.random.randn(d_model, self.depth) for _ in range(num_heads)]\n",
+    "        self.wk = [np.random.randn(d_model, self.depth) for _ in range(num_heads)]\n",
+    "        self.wv = [np.random.randn(d_model, self.depth) for _ in range(num_heads)]\n",
+    "        '''\n",
+    "        Initializes the matrix randomly with np.random.randn, generates a sample from a Gaussian distribution.\n",
+    "        It repeats for num_heads (8 here) times.\n",
+    "        The dimension of this matrix is (d_model, self.depth)\n",
+    "        '''\n",
+    "        self.wo = np.random.randn(d_model, d_model)\n",
+    "        '''\n",
+    "        Initializes the WO matrix randomly with np.random.randn, generates a sample from a Gaussian distribution.\n",
+    "        '''\n",
+    "        \n",
+    "    def run(self, Q, K, V):\n",
+    "        heads = []\n",
+    "        for i in range(self.num_heads):\n",
+    "            # split and apply attention to each head\n",
+    "            heads.append(self.attention.run(np.dot(Q * self.wq[i]), np.dot(K * self.wk[i]), np.dot(V * self.wv[i])))\n",
+    "\n",
+    "        # concatenate and apply final linear layer\n",
+    "        concatenated = np.concatenate(heads, axis=-1)\n",
+    "        return np.dot(concatenated, self.wo)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a70d89ad-4440-4c10-b059-38d81fd9979b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3167368c-41b1-4a15-a450-0d44516f0edd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
