--- a/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
+++ b/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
@@ -72,8 +72,8 @@
     "        output = MultiHead().run(input) # will be defined later on.\n",
     "        return output\n",
     "\n",
-    "    def feed_forward(self, input): ### Not yet described, described in 3.3\n",
-    "        output = FeedForward().run(input) # will be defined later on \n",
+    "    def feed_forward(self, mh_output): ### Not yet described, described in 3.3\n",
+    "        output = FeedForward().run(mh_output) # will be defined later on \n",
     "        return output\n",
     "        \n",
     "    def ma_layer(self, positional_encoded_embedding):\n",
@@ -149,8 +149,8 @@
     "        output = MultiHead().run(masked_ma_layer_output, input) # will be defined later on.\n",
     "        return output\n",
     "\n",
-    "    def feed_forward(self, input): ### Not yet described, described in 3.3\n",
-    "        output = FeedForward().run(input) # will be defined later on \n",
+    "    def feed_forward(self, mh_output): ### Not yet described, described in 3.3\n",
+    "        output = FeedForward().run(mh_output) # will be defined later on \n",
     "        return output\n",
     "        \n",
     "    def masked_ma_layer(positional_encoded_embedding):\n",
@@ -265,7 +265,7 @@
     "        self.attention = ScaledDotProductAttention() # Attention\n",
     "        self.d_model = d_model\n",
     "        self.num_heads = num_heads\n",
-    "        self.depth = d_model // num_heads \n",
+    "        self.depth = d_model // num_heads\n",
     "        '''\n",
     "        Calculates the dimension of each head.\n",
     "        It divides the dimension of the model by the number of heads.\n",
@@ -307,11 +307,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3167368c-41b1-4a15-a450-0d44516f0edd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class FeedForward:\n",
+    "    '''\n",
+    "    In addition to attention sub-layers, each of the layers in our encoder and decoder contains\n",
+    "    a fully connected feed-forward network, which is applied to each position separately and identically.\n",
+    "    This consists of two linear transformations with a ReLU activation in between.\n",
+    "    $FFN(x) = max(0, xW_1 + b_1)W_2 + b_2 $\n",
+    "    While the linear transformations are the same across different positions, they use different parameters from layer to layer.\n",
+    "    Another way of describing this is as two convolutions with kernel size 1.\n",
+    "    The dimensionality of input and output is $d_model = 512$, and the inner-layer has dimensionality$d_{ff} = 2048$.\n",
+    "    '''\n",
+    "    def __init__(self, d_model=512, d_ff=2048):\n",
+    "        # weight\n",
+    "        self.W1 = np.random.randn(d_model, d_ff) # transform input vector from d_model to d_ff\n",
+    "        self.W2 = np.random.randn(d_ff, d_model) # transform the transformed vector back to the dimension of d_model\n",
+    "\n",
+    "        # bias \n",
+    "        self.b1 = np.zeros(d_ff) # bias_1 = size of d_ff\n",
+    "        self.b2 = np.zeros(d_model) # bias_2 = size of d_model\n",
+    "\n",
+    "    def relu(self, x):\n",
+    "        return np.maximum(0, x)\n",
+    "        \n",
+    "    def run(self, mh_output):\n",
+    "        w1_b1 = self.relu(np.dot(mh_output, self.W1) + self.b1) # First linear transformation\n",
+    "        output = np.dot(w1_b1, self.W2) + self.b2 # Second linear transformation\n",
+    "        return output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8782802-a5f1-44b7-8d63-6f808e5fe485",
+   "metadata": {},
+   "source": [
+    "# 3.4 Embeddings and Softmax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93470dd5-b920-45af-a195-9de8255e390f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Embed:\n",
+    "    def __init__(self, vocab_size, d_model):\n",
+    "        self.vocab_size = vocab_size\n",
+    "        self.d_model = d_model\n",
+    "        self.weight = np.random.randn(vocab_size, d_model) * (1/np.sqrt(d_model))\n",
+    "\n",
+    "    def token_to_embedding(self, token_ids):\n",
+    "        embeddings = self.weight[token_ids] * np.sqrt(self.d_model)\n",
+    "        return embeddings\n",
+    "\n",
+    "    def output_to_probabilities(self, decoder_output):\n",
+    "        logits = decoder_output @ self.weight.T # Linear Transformation\n",
+    "        probabilities = self.softmax(logits) # Softmax\n",
+    "        return probabilities\n",
+    "        \n",
+    "    def softmax(self, logtis):\n",
+    "        e_x = np.exp(logits - np.max(logits, axis=-1, keepdims=True))\n",
+    "        return e_x / e_x.sum(axis=-1, keepdims=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44a8d6ca-7bf3-4c45-b9e2-85199253836d",
+   "metadata": {},
+   "source": [
+    "# 3.5 Positional Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc0e547a-13b5-40f7-aacd-47c2aa039a3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PositionalEncoding:\n",
+    "    def __init__ (self, d_model=512):\n",
+    "        self.d_model = d_model\n",
+    "        \n",
+    "    def sin_wave(self, pos, i):\n",
+    "        return np.sin(pos/10000 ** (2i / self.d_model))\n",
+    "\n",
+    "    def cos_wave(self, pos, i)\n",
+    "        return np.sin(pos/10000 ** (2i / self.d_model))\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
@@ -324,6 +413,14 @@
     "    def __init__(self):\n",
     "        pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a0e2e23-f05d-4671-a4a9-87c98fce508f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
