feat: updated LayerNormalization

--- a/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
+++ b/Research Paper Implementation/Attention Is All You Need/Transformer.ipynb
@@ -48,8 +48,8 @@
     "    To facilitate these residual connections, all sub-layers in the model (including embedding layer)\n",
     "    produces outputs of dimension d_model = 512\n",
     "    '''\n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self, d_model=512):\n",
+    "        self.layer_norm  = LayerNormalization(d_model)\n",
     "\n",
     "    def input_embedding(self, input):\n",
     "        return Embed().run(input)\n",
@@ -60,13 +60,13 @@
     "        return positional_encoded_embedding\n",
     "\n",
     "    def normalized(self, output): ### Not yet described, described in ???\n",
-    "        normalized_output = Normalized().run(output) # will be defined later on.\n",
+    "        normalized_output = LayerNormalization().run(output) # will be defined later on.\n",
     "        return normalized_output \n",
     "        \n",
     "    def add_norm(self, input, layer_output):\n",
     "        # in ma_layer, input will be positional_encoded_embedding\n",
     "        # in ff_layer, input will be the output of ma_layer\n",
-    "        return normalized(input + layer_output)\n",
+    "        return self.layer_norm.run(input + layer_output)\n",
     "\n",
     "    def multihead_attention(self, input): ### Not yet described, described in 3.2.2\n",
     "        output = MultiHead().run(input) # will be defined later on.\n",
@@ -125,8 +125,8 @@
     "    To facilitate these residual connections, all sub-layers in the model (including embedding layer)\n",
     "    produces outputs of dimension d_model = 512\n",
     "    '''\n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self, d_model=512):\n",
+    "        self.layer_norm = LayerNormalization(d_model)\n",
     "        \n",
     "    def input_embedding(self, input):\n",
     "        return Embed().run(input)\n",
@@ -135,15 +135,11 @@
     "        embedded_input = self.input_embedding(input)\n",
     "        positional_encoded_embedding = PositionalEncoding().run(embedded_input) # will be defined later on.\n",
     "        return positional_encoded_embedding\n",
-    "\n",
-    "    def normalized(self, output): ### Not yet described, described in ???\n",
-    "        normalized_output = Normalized().run(output) # will be defined later on.\n",
-    "        return normalized_output \n",
-    "        \n",
-    "    def add_norm(self, input, layer_output):\n",
+    " \n",
+    "    def add_norm(self, input, layer_output): ### Not yet described, described in ???\n",
     "        # in ma_layer, input will be positional_encoded_embedding\n",
     "        # in ff_layer, input will be the output of ma_layer\n",
-    "        return normalized(input + layer_output)\n",
+    "        return self.layer_norm.run(input + layer_output)\n",
     "\n",
     "    def multihead_attention(self, masked_ma_layer_output, input): ### Not yet described, described in 3.2.2\n",
     "        output = MultiHead().run(masked_ma_layer_output, input) # will be defined later on.\n",
@@ -204,15 +200,15 @@
     "    In practice, we compute the attention function on a set of queries simultaneously, packed together into matrix Q.\n",
     "    The key in matrix K, the value in matrix V.\n",
     "    '''\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, d_k):\n",
     "        pass\n",
     "\n",
-    "    def softmax(matrix):\n",
+    "    def softmax(self, matrix):\n",
     "        e_x = np.exp(matrix - np.max(matrix, axis=-1, keepdims=True))\n",
     "        return e_x / e_x.sum(e_x, axis=-1, keepdims=True)\n",
     "    \n",
-    "    def run(Q, K, V):\n",
-    "        softmaxed = self.softmax(np.matmul(Q, K.T)/K.shape[1])\n",
+    "    def run(self, Q, K, V):\n",
+    "        softmaxed = self.softmax(np.matmul(Q, K.T)/np.sqrt(K.shape[1]))\n",
     "        result = np.matmul(softmaxed, V)\n",
     "        return result"
    ]
@@ -262,7 +258,6 @@
     "        d_model = dimension of input vector\n",
     "        num_heads = number of attention heads to use / h = 8 as per the paper\n",
     "        '''\n",
-    "        self.attention = ScaledDotProductAttention() # Attention\n",
     "        self.d_model = d_model\n",
     "        self.num_heads = num_heads\n",
     "        self.depth = d_model // num_heads\n",
@@ -284,7 +279,9 @@
     "        '''\n",
     "        Initializes the WO matrix randomly with np.random.randn, generates a sample from a Gaussian distribution.\n",
     "        '''\n",
-    "        \n",
+    "\n",
+    "        self.attention = ScaledDotProductAttention() # Attention\n",
+    "\n",
     "    def run(self, Q, K, V):\n",
     "        heads = []\n",
     "        for i in range(self.num_heads):\n",
@@ -395,11 +392,40 @@
     "        self.d_model = d_model\n",
     "        \n",
     "    def sin_wave(self, pos, i):\n",
-    "        return np.sin(pos/10000 ** (2i / self.d_model))\n",
+    "        return np.sin(pos/10000 ** (2 * i / self.d_model))\n",
     "\n",
     "    def cos_wave(self, pos, i)\n",
-    "        return np.sin(pos/10000 ** (2i / self.d_model))\n",
+    "        return np.cos(pos/10000 ** (2 * i / self.d_model))\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "848a905b-1a3c-4cf0-b775-53c8d52e439f",
+   "metadata": {},
+   "source": [
+    "# Additional - Layer Normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f44b5061-a804-41e6-95b1-ac18201ba9d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LayerNormalization:\n",
+    "    def __init__(self, d_model, epsilon=1e-6):\n",
+    "        self.epsilon = epsilon\n",
+    "        self.gamma = np.ones(d_model)\n",
+    "        self.beta = np.zeros(d_model)\n",
+    "\n",
+    "\n",
+    "    def run(self, x):\n",
+    "        mean = np.mean(x, axis=-1, keepdims=True)\n",
+    "        variance= np.var(x, axis=-1, keepdims=True)\n",
+    "        normalized = (x - mean) / np.sqrt(variance + self.epsilon)\n",
+    "        return self.gamma * normalized + self.beta"
    ]
   },
   {
